DbContext moved to infrastructure project

--- a/src/HostService/appsettings.json
+++ b/src/HostService/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "DbConnectionString": "Server=THISISRASEL;Database=SchoolDB;Trusted_Connection=True;",
   "ExchangeName": "SchoolExchange"
 }
