--- a/src/WebService/appsettings.json
+++ b/src/WebService/appsettings.json
@@ -1,3 +1,4 @@
 {
-  "AllowedHosts": "*"
+  "DbConnectionString": "Server=THISISRASEL;Database=SchoolDB;Trusted_Connection=True;",
+  "ExchangeName": "SchoolExchange"
 }
