--- a/src/WebService/appsettings.Development.json
+++ b/src/WebService/appsettings.Development.json
@@ -1,3 +1,4 @@
 {
-  "ExchangeName":  "SchoolExchange"
+  "DbConnectionString": "Server=THISISRASEL;Database=SchoolDB;Trusted_Connection=True;",
+  "ExchangeName": "SchoolExchange"
 }
