--- a/src/Infrastructure/Infrastructure.csproj
+++ b/src/Infrastructure/Infrastructure.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
     <PackageReference Include="RabbitMQ.Client" Version="6.2.4" />
     <PackageReference Include="Scrutor" Version="4.1.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="6.0.0-dev-00265" />
   </ItemGroup>
 
   <ItemGroup>
